# web-services

./: .gitignore  Cargo.toml  LICENSE  README.md  pem_to_env.sh
.cargo/: config.toml
chunks/: Cargo.toml
chunks/src/: lib.rs
docs/: http3-capacity-investigation.md
examples/obs-rist-llhls/: Cargo.toml  README.md
examples/obs-rist-llhls/src/: main.rs
examples/obs-rist-llhls/src/static/: app.js  index.html  styles.css
hls/: Cargo.toml
hls/src/: lib.rs  streaming.rs
scripts/: validate-llhls.mjs
tls/local.wavey.ai/: cert.pem  fullchain.pem  privkey.pem
upload-response/: Cargo.toml  README.md
upload-response/src/: bridge.rs  lib.rs  pure_rist.rs  remote.rs  response_writer.rs  rist.rs  srt.rs  tcp.rs  udp_fec.rs  watcher.rs  webrtc.rs
upload-response/tests/: proto_benchmark.rs  worker_integration.rs
web-service/: Cargo.toml
web-service/examples/: multi_proto.rs
web-service/src/: config.rs  error.rs  h2.rs  h3.rs  h3_tokio_quiche.rs  http_range.rs  lib.rs  quic_relay.rs  raw_tcp.rs  server.rs  tls.rs  traits.rs
web-service/src/proxy/: api.rs  backend.rs  balancer.rs  config.rs  context.rs  h3_pool.rs  id.rs  ingress.rs  mod.rs  pool.rs  proxy.rs  queue.rs  router.rs  state.rs  upstream.rs  worker.rs
web-service/tests/: benchmark.rs  common.rs  h1_bench.rs  h2_streaming.rs  h3_streaming.rs  multi_proto_smoke.rs  proxy_benchmark.rs  proxy_ingress_smoke.rs  proxy_upstream_protocols.rs  quinn_request_scheduler.rs  tokio_quiche_backend_smoke.rs
