[workspace]
members = [
    "web-service",
    "hls",
    "chunks",
    "upload-response",
    "examples/obs-rist-llhls",
]
resolver = "3"

[patch.crates-io]
rtmp-ingress = { path = "../rtmp-ingress" }
wavey-boxer = { path = "../boxer" }
wavey-rist = { path = "../rist-rs/rist" }
wavey-srt = { path = "../av-rs/srt" }
rist-core = { path = "../rist-rs/rist-core" }
rist-mio = { path = "../rist-rs/rist-mio" }
rist-sys = { path = "../rist-rs/rist-sys" }

[workspace.package]
license = "MIT"
repository = "https://github.com/wavey-ai/web-services"

[profile.release]
opt-level = 3
strip = true
debug = false
codegen-units = 1
lto = true
