[workspace]
members = [
    "web-service",
    "hls",
    "chunks",
    "upload-response",
    "examples/obs-rist-llhls",
]
resolver = "3"

[workspace.package]
license = "MIT"
repository = "https://github.com/wavey-ai/web-services"

[profile.release]
opt-level = 3
strip = true
debug = false
codegen-units = 1
lto = true
