[package]
name = "chunks"
version = "0.1.0"
edition = "2024"

[dependencies]
web-service = { path = "../web-service/" }
env_logger = "0.11.0"
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
structopt = "0.3"
bytes = "1.5"
async-trait = "0.1.88"
http = "1.3.1"
regex = "1.11.1"
h3 = "0.0.8"
h3-quinn = { version = "0.0.10", features = ["datagram"] }
h3-webtransport = "0.1.2"
h3-datagram = "0.0.2"
playlists = { path = "../../playlists" }
