[package]
name = "av-hls"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true
description = "Low-latency HLS publication for Wavey media services"

[lib]
name = "hls"

[dependencies]
web-service = { package = "av-web-service", git = "https://github.com/wavey-ai/web-services.git" }
env_logger = "0.11.0"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
structopt = "0.3"
bytes = "1.11.1"
flate2 = "1.0.28"
xmpegts = "0.2.4"
async-trait = "0.1.88"
http = "1.4.1"
regex = "1.11.1"
h3 = "0.0.8"
h3-quinn = { version = "0.0.10", features = ["datagram"] }
h3-webtransport = "0.1.2"
h3-datagram = "0.0.2"
playlists = { git = "https://github.com/wavey-ai/playlists.git" }
tokio-tungstenite = "0.29"
futures-util = "0.3"
hyper-util = { version = "0.1.20", features = ["tokio"] }
hyper = { version = "1.10.1", features = ["full"] }
