[package]
name = "upload-response"
version = "0.1.0"
edition = "2021"

[dependencies]
web-service = { path = "../web-service/" }
playlists = { path = "../../playlists" }
http-pack = { path = "../../http-pack", default-features = false }
tokio = { version = "1.45", features = ["full"] }
bytes = "1.5"
async-trait = "0.1.88"
http = "1"
tracing = "0.1.40"
futures-util = "0.3"
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots"] }
hyper-util = { version = "0.1", features = ["full"] }
hyper = { version = "1.6", features = ["full"] }
srt = { git = "https://github.com/wavey-ai/av-rs.git", features = ["async"] }

# WebRTC Data Channels
matchbox_socket = { git = "ssh://git@github.com/wavey-ai/matchbox", branch = "feat/graceful-shutdown" }
futures-timer = "3"
futures = "0.3"

[dev-dependencies]
xxhash-rust = { version = "0.8", features = ["xxh64"] }
reqwest = { version = "0.12", features = ["rustls-tls", "http2", "stream"] }
portpicker = "0.1"
http-body-util = "0.1"
# SRT is already in dependencies, tests can use it
dotenvy = "0.15"
tls-helpers = { git = "https://github.com/wavey-ai/tls-helpers.git" }
tokio-rustls = "0.26"
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls", "ring"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pki-types = "1"
rustls-pemfile = "2"
futures-util = "0.3"
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots"] }
# RTMP testing
rtmp-ingress = { path = "../../rtmp-ingress", features = ["upload-response"] }
rml_rtmp = { git = "ssh://git@github.com/wavey-ai/rust-media-libs.git" }
# WebRTC testing
matchbox_signaling = { git = "ssh://git@github.com/wavey-ai/matchbox", branch = "feat/graceful-shutdown" }
futures-timer = "3"
