[package]
name = "av-upload-response"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
description = "RIST, SRT, and datagram contribution services for Wavey media"

[lib]
name = "upload_response"

[features]
default = ["tcp"]
srt = ["dep:srt"]
rist = ["dep:rist"]
rist-pure = ["dep:rist-core-pure", "dep:rist-mio-pure"]
webrtc = ["dep:matchbox_socket", "dep:futures-timer", "dep:futures"]
tcp = []
udp-fec = ["dep:raptorq-datagram-fec", "raptorq-datagram-fec/udp"]

[dependencies]
anyhow = "1.0"
web-service = { package = "av-web-service", version = "0.1.0" }
playlists = "0.1.6"
http-pack = { version = "0.1.0", default-features = false }
tokio = { version = "1.52.3", features = ["full"] }
bytes = "1.11.1"
async-trait = "0.1.88"
http = "1"
tracing = "0.1.40"
futures-util = "0.3"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
hyper-util = { version = "0.1.20", features = ["full"] }
hyper = { version = "1.10.1", features = ["full"] }
reqwest = { version = "0.13.4", features = ["rustls", "http2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
srt = { package = "wavey-srt", version = "0.1.0", features = ["async"], optional = true }
raptorq-datagram-fec = { version = "0.1.6", default-features = false, optional = true }
rist = { package = "wavey-rist", version = "0.1.0", features = ["tokio"], optional = true }
rist-core-pure = { package = "rist-core", version = "0.1.0", optional = true }
rist-mio-pure = { package = "rist-mio", version = "0.1.0", optional = true }

# WebRTC Data Channels (optional)
matchbox_socket = { version = "0.13.0", optional = true }
futures-timer = { version = "3", optional = true }
futures = { version = "0.3", optional = true }

# TCP+TLS
tokio-rustls = "0.26.4"
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"

[dev-dependencies]
xxhash-rust = { version = "0.8", features = ["xxh64"] }
base64 = "0.22"
reqwest = { version = "0.13.4", features = ["rustls", "http2", "stream"] }
portpicker = "0.1"
http-body-util = "0.1.3"
# SRT is already in dependencies, tests can use it
dotenvy = "0.15"
tls-helpers = "0.2.0"
tokio-rustls = "0.26.4"
quinn = { version = "0.11.11", default-features = false, features = ["runtime-tokio", "rustls", "ring"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std"] }
rustls-pki-types = "1.14.1"
rustls-pemfile = "2"
futures-util = "0.3"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
# WebRTC testing
matchbox_signaling = "0.13.0"
futures-timer = "3"
