[package]
name = "web-service"
authors = ["Jamie Brough <jamie@wavey.ai>"]
version = "0.1.0"
edition = "2021"

[dependencies]
hyper-util = { version = "0.1", features = ["full"] }
env_logger = "0.11.0"
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
structopt = "0.3"
bytes = "1.5"
hyper = { version = "1.6", features = ["full"] }
http = "1"
regex = "1.10.2"
http-body-util = "0.1"
anyhow = "1.0.31"
dotenvy = "0.15"
quinn = { version = "0.11", default-features = false, features = [
  "runtime-tokio",
  "rustls",
  "ring",
] }
rustls = { version = "0.23.35", default-features = false, features = [
  "logging",
  "ring",
  "std",
] }
h2 = "0.4"
xxhash-rust = { version = "0.8.10", features = ["xxh3", "const_xxh3"] }
h3 = { git = "https://github.com/hyperium/h3.git" }
h3-quinn = { git = "https://github.com/hyperium/h3.git", features = [
  "datagram",
] }
h3-webtransport = { git = "https://github.com/hyperium/h3.git" }
h3-datagram = { git = "https://github.com/hyperium/h3.git" }
playlists = { git = "https://github.com/wavey-ai/playlists.git" }
tls-helpers = { git = "https://github.com/wavey-ai/tls-helpers.git" }
xmpegts = { git = "https://github.com/wavey-ai/xiu" }
async-trait = "0.1.88"
thiserror = "2.0.12"
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }
tokio-rustls = "0.26"
portpicker = "0.1"
base64 = "0.22"
rustls-pemfile = "2"
rustls-native-certs = "0.7"
