[package]
name = "web-service"
authors = ["Jamie Brough <jamie@wavey.ai>"]
version = "0.1.0"
edition = "2021"

[dependencies]
hyper-util = { version = "0.1.20", features = ["full"] }
env_logger = "0.11.0"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
structopt = "0.3"
bytes = "1.11.1"
hyper = { version = "1.10.1", features = ["full"] }
http = "1.4.1"
regex = "1.10.2"
http-body-util = "0.1.3"
anyhow = "1.0.31"
base64 = "0.22"
dotenvy = "0.15"
quinn = { version = "0.11.11", default-features = false, features = [
  "runtime-tokio",
  "rustls",
  "ring",
] }
rustls = { version = "0.23.40", default-features = false, features = [
  "logging",
  "ring",
  "std",
] }
webpki-roots = "1.0.7"
h2 = "0.4.14"
xxhash-rust = { version = "0.8.10", features = ["xxh3", "const_xxh3"] }
h3 = "0.0.8"
h3-quinn = { version = "0.0.10", features = ["datagram"] }
h3-webtransport = "0.1.2"
h3-datagram = "0.0.2"
playlists = { git = "https://github.com/wavey-ai/playlists.git", rev = "885ffe5a29ed89a3946179cc4dc2c73399665310" }
tls-helpers = { git = "https://github.com/wavey-ai/tls-helpers.git" }
xmpegts = { git = "https://github.com/wavey-ai/xiu" }
async-trait = "0.1.88"
thiserror = "2.0.12"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
gen-id = { git = "https://github.com/wavey-ai/gen-id.git" }
hyper-rustls = { version = "0.27.9", default-features = false, features = ["http1", "http2", "webpki-tokio", "ring"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = { version = "2", features = ["serde"] }
http-pack = { git = "https://github.com/wavey-ai/http-pack.git" }
rustls-pemfile = "2"

[dev-dependencies]
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "http2"] }
tokio-rustls = "0.26.4"
portpicker = "0.1"
rustls-pemfile = "2"
rustls-native-certs = "0.8.4"
sha2 = "0.11"

[[test]]
name = "benchmark"
path = "tests/benchmark.rs"
harness = false

[[test]]
name = "proxy_benchmark"
path = "tests/proxy_benchmark.rs"
harness = false
